--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>lasagna Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">lasagna</a>
+    <h1>lasagna</h1>
 </body>
 </html>
