--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html">lasagna</a>
+    <a href="recipes/lasagna.html">Lasagne Verdi al Forno</a>
 </body>
 </html>
