--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,45 @@
     <title>lasagna Recipe</title>
 </head>
 <body>
-    <h1>lasagna</h1>
+    <h1>Lasagne Verdi al Forno</h1>
+    <img src="images/lasagna.webp">
+    <p>
+        A recipe from my home in Emilia-Romagna, Italy. This lasagne verde made 
+        with spinach pasta cannot be beaten. It's excellent if you want to impress 
+        some guests — or even yourself. It may be a bit time-consuming, but it's well 
+        worth the TLC you put into it.
+    </p>
+    <h4>Ingridients</h4>
+    <ul>
+        <li>5 ounces spinach - rinsed, stemmed, and dried</li>
+        <li>5/8 cup semolina flour</li>
+        <li>2 large eggs</li>
+        <li>1 teaspoon salt</li>
+        <li>1 1/2 cups all-purpose flour</li>
+    </ul>
+    <h4>Directions</h4>
+    <ol>
+        <li>Make pasta: Place a steamer insert into a saucepan and fill with water to just 
+            below the bottom of the steamer. Bring water to a boil. Add spinach, cover, and 
+            steam until bright green, about 2 minutes. Squeeze spinach to remove excess 
+            moisture and process in a food processor to make a paste. Add semolina, eggs, and 
+            salt; process until smooth. Transfer mixture to a large bowl and stir in enough 
+            flour to make a smooth dough. Knead briefly, then cover with a dish towel and set 
+            aside.
+        </li>
+        <li>
+            Make ragu: In a large skillet, melt butter over medium-high heat. Cook and stir
+            carrot, celery, onion, and bacon in hot butter until onion is translucent. Stir
+            in pork, beef, and ham; cook and stir until crumbly and browned. Stir in beef 
+            stock, tomato paste, and oregano. Season with salt and pepper. Reduce heat to low, 
+            cover, and simmer for 20 minutes.
+        </li>
+        <li>
+            While ragu is simmering, make béchamel: Combine butter and flour in a medium 
+            saucepan over medium-low heat. Whisk to make a roux. Remove from heat, let rest 
+            for 1 minute, then whisk in warm milk. Return to heat and simmer for 10 minutes, 
+            stirring constantly, until thickened. Season with salt and nutmeg. Remove from heat.
+        </li>
+    </ol>
 </body>
 </html>
