Add recipies and craete template recipie page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="recipes/lasagna.html">Lasagne Verdi al Forno</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagne Verdi al Forno</a></li>
+        <li><a href="recipes/Awesome_Pasta_Salad.html">Recipe Title 2</a></li>
+        <li><a href="recipes/Chimichurri_Sauce.html">Recipe Title 3</a></li>
+      </ul>
 </body>
 </html>
