--- a/recipes/Chimichurri_Sauce.html
+++ b/recipes/Chimichurri_Sauce.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Chimichurri Sauce</h1>
-    <img src="images/lasagna.webp">
+    <img src="images/ChimichurriSauce.webp">
     <p>
         This famous Argentinian chimichurri sauce is perfect for any grilled 
         chicken, meat, or fish. My catering customers love it on garlic 
