Fixing image relative path

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagne Verdi al Forno</h1>
-    <img src="images/lasagna.webp">
+    <img src="./images/lasagne.webp">
     <p>
         A recipe from my home in Emilia-Romagna, Italy. This lasagne verde made 
         with spinach pasta cannot be beaten. It's excellent if you want to impress 
