--- a/recipes/Awesome_Pasta_Salad.html
+++ b/recipes/Awesome_Pasta_Salad.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Awesome Pasta Salad</h1>
-    <img src="images/awesome-pasta-salad.webp">
+    <img src="./images/awesome-pasta-salad.webp">
     <p>
         This pasta salad with pepperoni, tomatoes, and provolone cheese 
         is the best I've ever eaten, and people request it frequently. 
